Implemented function to calculate the magnetic profile, and updated README

--- a/teslamax.ipynb
+++ b/teslamax.ipynb
@@ -1325,6 +1325,184 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.57079633,  1.58666296,  1.60252959,  1.61839622,  1.63426285,\n",
+       "        1.65012947,  1.6659961 ,  1.68186273,  1.69772936,  1.71359599,\n",
+       "        1.72946262,  1.74532925,  1.76119588,  1.77706251,  1.79292914,\n",
+       "        1.80879577,  1.8246624 ,  1.84052903,  1.85639566,  1.87226229,\n",
+       "        1.88812892,  1.90399555,  1.91986218,  1.93572881,  1.95159544,\n",
+       "        1.96746207,  1.9833287 ,  1.99919533,  2.01506195,  2.03092858,\n",
+       "        2.04679521,  2.06266184,  2.07852847,  2.0943951 ,  2.11026173,\n",
+       "        2.12612836,  2.14199499,  2.15786162,  2.17372825,  2.18959488,\n",
+       "        2.20546151,  2.22132814,  2.23719477,  2.2530614 ,  2.26892803,\n",
+       "        2.28479466,  2.30066129,  2.31652792,  2.33239455,  2.34826118,\n",
+       "        2.3641278 ,  2.37999443,  2.39586106,  2.41172769,  2.42759432,\n",
+       "        2.44346095,  2.45932758,  2.47519421,  2.49106084,  2.50692747,\n",
+       "        2.5227941 ,  2.53866073,  2.55452736,  2.57039399,  2.58626062,\n",
+       "        2.60212725,  2.61799388,  2.63386051,  2.64972714,  2.66559377,\n",
+       "        2.6814604 ,  2.69732703,  2.71319366,  2.72906028,  2.74492691,\n",
+       "        2.76079354,  2.77666017,  2.7925268 ,  2.80839343,  2.82426006,\n",
+       "        2.84012669,  2.85599332,  2.87185995,  2.88772658,  2.90359321,\n",
+       "        2.91945984,  2.93532647,  2.9511931 ,  2.96705973,  2.98292636,\n",
+       "        2.99879299,  3.01465962,  3.03052625,  3.04639288,  3.06225951,\n",
+       "        3.07812614,  3.09399276,  3.10985939,  3.12572602,  3.14159265])"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phi_vector+np.pi/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.00000000e+00,   8.66621204e-01],\n",
+       "       [  1.58666296e-02,   8.81385005e-01],\n",
+       "       [  3.17332591e-02,   8.94350667e-01],\n",
+       "       [  4.75998887e-02,   8.94350667e-01],\n",
+       "       [  6.34665183e-02,   8.94350667e-01],\n",
+       "       [  7.93331478e-02,   9.56937248e-01],\n",
+       "       [  9.51997774e-02,   9.56937248e-01],\n",
+       "       [  1.11066407e-01,   9.56937248e-01],\n",
+       "       [  1.26933037e-01,   1.01130548e+00],\n",
+       "       [  1.42799666e-01,   1.02335421e+00],\n",
+       "       [  1.58666296e-01,   1.03508162e+00],\n",
+       "       [  1.74532925e-01,   1.05479738e+00],\n",
+       "       [  1.90399555e-01,   1.10578616e+00],\n",
+       "       [  2.06266184e-01,   1.10578616e+00],\n",
+       "       [  2.22132814e-01,   1.12038859e+00],\n",
+       "       [  2.37999443e-01,   1.14825595e+00],\n",
+       "       [  2.53866073e-01,   1.15869413e+00],\n",
+       "       [  2.69732703e-01,   1.17333080e+00],\n",
+       "       [  2.85599332e-01,   1.18990752e+00],\n",
+       "       [  3.01465962e-01,   1.18713565e+00],\n",
+       "       [  3.17332591e-01,   1.20808444e+00],\n",
+       "       [  3.33199221e-01,   1.21080179e+00],\n",
+       "       [  3.49065850e-01,   1.20821945e+00],\n",
+       "       [  3.64932480e-01,   1.20972059e+00],\n",
+       "       [  3.80799110e-01,   1.20461938e+00],\n",
+       "       [  3.96665739e-01,   1.20555204e+00],\n",
+       "       [  4.12532369e-01,   1.20085291e+00],\n",
+       "       [  4.28398998e-01,   1.19599726e+00],\n",
+       "       [  4.44265628e-01,   1.18640944e+00],\n",
+       "       [  4.60132257e-01,   1.17614400e+00],\n",
+       "       [  4.75998887e-01,   1.16248076e+00],\n",
+       "       [  4.91865516e-01,   1.15250042e+00],\n",
+       "       [  5.07732146e-01,   1.14234747e+00],\n",
+       "       [  5.23598776e-01,   1.13293159e+00],\n",
+       "       [  5.39465405e-01,   1.10756633e+00],\n",
+       "       [  5.55332035e-01,   1.06790940e+00],\n",
+       "       [  5.71198664e-01,   1.04157573e+00],\n",
+       "       [  5.87065294e-01,   9.98169560e-01],\n",
+       "       [  6.02931923e-01,   9.74621400e-01],\n",
+       "       [  6.18798553e-01,   9.15747198e-01],\n",
+       "       [  6.34665183e-01,   8.91769437e-01],\n",
+       "       [  6.50531812e-01,   8.76105695e-01],\n",
+       "       [  6.66398442e-01,   8.46562350e-01],\n",
+       "       [  6.82265071e-01,   7.33012716e-01],\n",
+       "       [  6.98131701e-01,   7.33012716e-01],\n",
+       "       [  7.13998330e-01,   6.52763501e-01],\n",
+       "       [  7.29864960e-01,   5.91020736e-01],\n",
+       "       [  7.45731589e-01,   5.91020736e-01],\n",
+       "       [  7.61598219e-01,   5.34734394e-01],\n",
+       "       [  7.77464849e-01,   4.71237451e-01],\n",
+       "       [  7.93331478e-01,   4.71237451e-01],\n",
+       "       [  8.09198108e-01,   3.64163824e-01],\n",
+       "       [  8.25064737e-01,   3.00341152e-01],\n",
+       "       [  8.40931367e-01,   3.00341152e-01],\n",
+       "       [  8.56797996e-01,   3.00341152e-01],\n",
+       "       [  8.72664626e-01,   1.93617126e-01],\n",
+       "       [  8.88531256e-01,   1.73979474e-01],\n",
+       "       [  9.04397885e-01,   1.73979474e-01],\n",
+       "       [  9.20264515e-01,   1.60478226e-01],\n",
+       "       [  9.36131144e-01,   1.12799238e-01],\n",
+       "       [  9.51997774e-01,   1.01261875e-01],\n",
+       "       [  9.67864403e-01,   9.65478085e-02],\n",
+       "       [  9.83731033e-01,   8.18435716e-02],\n",
+       "       [  9.99597663e-01,   6.55997257e-02],\n",
+       "       [  1.01546429e+00,   5.50388827e-02],\n",
+       "       [  1.03133092e+00,   4.59445004e-02],\n",
+       "       [  1.04719755e+00,   4.59445004e-02],\n",
+       "       [  1.06306418e+00,   3.94409599e-02],\n",
+       "       [  1.07893081e+00,   3.31889607e-02],\n",
+       "       [  1.09479744e+00,   2.36746777e-02],\n",
+       "       [  1.11066407e+00,   2.36746777e-02],\n",
+       "       [  1.12653070e+00,   2.36746777e-02],\n",
+       "       [  1.14239733e+00,   1.71399635e-02],\n",
+       "       [  1.15826396e+00,   1.71399635e-02],\n",
+       "       [  1.17413059e+00,   1.22154145e-02],\n",
+       "       [  1.18999722e+00,   1.04179391e-02],\n",
+       "       [  1.20586385e+00,   1.04179391e-02],\n",
+       "       [  1.22173048e+00,   9.08218189e-03],\n",
+       "       [  1.23759711e+00,   7.61412575e-03],\n",
+       "       [  1.25346374e+00,   7.61412575e-03],\n",
+       "       [  1.26933037e+00,   5.56049979e-03],\n",
+       "       [  1.28519699e+00,   5.35376920e-03],\n",
+       "       [  1.30106362e+00,   4.25885619e-03],\n",
+       "       [  1.31693025e+00,   4.25885619e-03],\n",
+       "       [  1.33279688e+00,   3.68111186e-03],\n",
+       "       [  1.34866351e+00,   2.93108490e-03],\n",
+       "       [  1.36453014e+00,   2.74917493e-03],\n",
+       "       [  1.38039677e+00,   2.60734941e-03],\n",
+       "       [  1.39626340e+00,   2.32318153e-03],\n",
+       "       [  1.41213003e+00,   2.10200023e-03],\n",
+       "       [  1.42799666e+00,   1.65754618e-03],\n",
+       "       [  1.44386329e+00,   1.65754618e-03],\n",
+       "       [  1.45972992e+00,   1.47456679e-03],\n",
+       "       [  1.47559655e+00,   1.47456679e-03],\n",
+       "       [  1.49146318e+00,   1.17093648e-03],\n",
+       "       [  1.50732981e+00,   1.10284993e-03],\n",
+       "       [  1.52319644e+00,   1.10284993e-03],\n",
+       "       [  1.53906307e+00,   1.06092092e-03],\n",
+       "       [  1.55492970e+00,   1.00039782e-03],\n",
+       "       [  1.57079633e+00,   1.00039782e-03]])"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array((phi_vector,B_profile)).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "N_PROFILE_POINTS = 100\n",
+    "phi_vector_1q = np.linspace(phi_min,phi_max,N_PROFILE_POINTS)\n",
+    "phi_vector = np.concatenate((phi_vector_1q,\n",
+    "                                 phi_vector_1q+np.pi/2,\n",
+    "                                 phi_vector_1q+np.pi,\n",
+    "                                 phi_vector_1q+(3/2)*np.pi))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
