--- a/teslamax.ipynb
+++ b/teslamax.ipynb
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -655,11 +655,30 @@
     "        \n",
     "        self.path = Path(path)\n",
     "        self.path.mkdir(exist_ok=True)\n",
-    "        os.chdir(str(self.path))\n",
+    "        \n",
+    "        self.profile_data = []\n",
+    "        \n",
     "                \n",
     "    def run(self,verbose=False):\n",
     "        \n",
-    "        run_teslamax_from_params(self.params,verbose)"
+    "        cwd = os.getcwd()\n",
+    "        os.chdir(str(self.path))\n",
+    "        run_teslamax_from_params(self.params,verbose)\n",
+    "        os.chdir(cwd)\n",
+    "        \n",
+    "        self.profile_data = self.get_profile_data()\n",
+    "        \n",
+    "    def get_profile_data(self):\n",
+    "        \n",
+    "        profile_file_path = self.path / MAGNETIC_PROFILE_FILENAME\n",
+    "        profile_data = np.loadtxt(str(profile_file_path),\n",
+    "                         skiprows=1)\n",
+    "        \n",
+    "        return profile_data\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    "
    ]
   },
   {
@@ -671,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1920,270 +1939,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*******************************************\n",
-      "***COMSOL 5.2.1.229 progress output file***\n",
-      "*******************************************\n",
-      "Mon Jan 30 10:21:29 BRST 2017\n",
-      "COMSOL 5.2a (Build: 229) starting in batch mode\n",
-      "Running: C:\\Users\\fabiofortkamp\\code\\teslamax\\java\\TeslaMax.class\n",
-      "           Current Progress:   0 % - Circle 1\n",
-      "Memory: 377/378 598/599\n",
-      "           Current Progress:   8 % - Circle 2\n",
-      "Memory: 400/400 622/622\n",
-      "-          Current Progress:  17 % - Difference 1\n",
-      "Memory: 402/402 624/624\n",
-      "---------  Current Progress:  93 % - Resolving domains\n",
-      "Memory: 403/403 625/625\n",
-      "           Current Progress:   0 % - Circle 1\n",
-      "Memory: 412/412 632/632\n",
-      "           Current Progress:   8 % - Circle 2\n",
-      "-          Current Progress:  17 % - Difference 1\n",
-      "---------  Current Progress:  93 % - Resolving domains\n",
-      "           Current Progress:   0 % - Cylinder Block - Iron II Wedge 1Q\n",
-      "Memory: 444/445 635/636\n",
-      "           Current Progress:   0 % - Circle 1\n",
-      "Memory: 447/447 634/636\n",
-      "           Current Progress:   0 % - Circle 2\n",
-      "           Current Progress:   1 % - Difference 1\n",
-      "           Current Progress:   4 % - Resolving domains\n",
-      "           Current Progress:   4 % - Cylinder Block - Iron II Wedge 2Q\n",
-      "Memory: 448/449 634/636\n",
-      "           Current Progress:   4 % - Circle 1\n",
-      "Memory: 411/449 600/636\n",
-      "           Current Progress:   5 % - Circle 2\n",
-      "Memory: 412/449 600/636\n",
-      "           Current Progress:   5 % - Difference 1\n",
-      "           Current Progress:   8 % - Resolving domains\n",
-      "           Current Progress:   9 % - Cylinder Block 1 - Magnet II - 1Q\n",
-      "Memory: 413/449 601/636\n",
-      "           Current Progress:   9 % - Circle 1\n",
-      "Memory: 433/449 619/636\n",
-      "           Current Progress:   9 % - Circle 2\n",
-      "Memory: 435/449 619/636\n",
-      "           Current Progress:   9 % - Difference 1\n",
-      "-          Current Progress:  13 % - Resolving domains\n",
-      "-          Current Progress:  13 % - Cylinder Block 1 - Magnet II - 2Q\n",
-      "Memory: 436/449 619/636\n",
-      "-          Current Progress:  13 % - Circle 1\n",
-      "Memory: 442/449 621/636\n",
-      "-          Current Progress:  13 % - Circle 2\n",
-      "-          Current Progress:  14 % - Difference 1\n",
-      "-          Current Progress:  17 % - Resolving domains\n",
-      "-          Current Progress:  17 % - Cylinder Block 2 - Magnet II - 1Q\n",
-      "Memory: 443/449 621/636\n",
-      "-          Current Progress:  17 % - Circle 1\n",
-      "Memory: 432/449 603/636\n",
-      "-          Current Progress:  18 % - Circle 2\n",
-      "-          Current Progress:  18 % - Difference 1\n",
-      "--         Current Progress:  22 % - Resolving domains\n",
-      "Memory: 433/449 604/636\n",
-      "--         Current Progress:  22 % - Cylinder Block 2 - Magnet II - 2Q\n",
-      "Memory: 435/449 605/636\n",
-      "--         Current Progress:  22 % - Circle 1\n",
-      "Memory: 441/449 609/636\n",
-      "--         Current Progress:  22 % - Circle 2\n",
-      "--         Current Progress:  23 % - Difference 1\n",
-      "Memory: 442/449 610/636\n",
-      "--         Current Progress:  26 % - Resolving domains\n",
-      "Memory: 443/449 611/636\n",
-      "--         Current Progress:  26 % - Cylinder Block 3 - Magnet II - 1Q\n",
-      "Memory: 444/449 611/636\n",
-      "--         Current Progress:  26 % - Circle 1\n",
-      "Memory: 437/450 597/636\n",
-      "--         Current Progress:  27 % - Circle 2\n",
-      "Memory: 437/450 598/636\n",
-      "--         Current Progress:  27 % - Difference 1\n",
-      "---        Current Progress:  30 % - Resolving domains\n",
-      "---        Current Progress:  31 % - Cylinder Block 3 - Magnet II - 2Q\n",
-      "Memory: 441/450 601/636\n",
-      "---        Current Progress:  31 % - Circle 1\n",
-      "Memory: 450/450 607/636\n",
-      "---        Current Progress:  31 % - Circle 2\n",
-      "Memory: 451/451 607/636\n",
-      "---        Current Progress:  31 % - Difference 1\n",
-      "---        Current Progress:  35 % - Resolving domains\n",
-      "Memory: 451/451 608/636\n",
-      "---        Current Progress:  35 % - Cylinder Block - Iron II\n",
-      "Memory: 452/452 608/636\n",
-      "---        Current Progress:  35 % - Circle 1\n",
-      "Memory: 478/478 611/636\n",
-      "---        Current Progress:  35 % - Circle 2\n",
-      "---        Current Progress:  36 % - Difference 1\n",
-      "Memory: 479/479 612/636\n",
-      "---        Current Progress:  39 % - Resolving domains\n",
-      "---        Current Progress:  39 % - Cylinder Block 1 - Magnet IV - 1Q\n",
-      "---        Current Progress:  39 % - Circle 1\n",
-      "Memory: 482/482 615/636\n",
-      "----       Current Progress:  40 % - Circle 2\n",
-      "----       Current Progress:  40 % - Difference 1\n",
-      "----       Current Progress:  43 % - Resolving domains\n",
-      "----       Current Progress:  44 % - Cylinder Block 1 - Magnet IV - 2Q\n",
-      "Memory: 483/483 616/636\n",
-      "----       Current Progress:  44 % - Circle 1\n",
-      "Memory: 484/484 617/636\n",
-      "----       Current Progress:  44 % - Circle 2\n",
-      "----       Current Progress:  44 % - Difference 1\n",
-      "----       Current Progress:  48 % - Resolving domains\n",
-      "----       Current Progress:  48 % - Cylinder Block 2 - Magnet IV - 1Q\n",
-      "Memory: 483/484 617/636\n",
-      "----       Current Progress:  48 % - Circle 1\n",
-      "Memory: 470/484 602/636\n",
-      "----       Current Progress:  48 % - Circle 2\n",
-      "----       Current Progress:  49 % - Difference 1\n",
-      "-----      Current Progress:  52 % - Resolving domains\n",
-      "Memory: 471/484 603/636\n",
-      "-----      Current Progress:  52 % - Cylinder Block 2 - Magnet IV - 2Q\n",
-      "Memory: 472/484 605/636\n",
-      "-----      Current Progress:  52 % - Circle 1\n",
-      "Memory: 465/484 597/636\n",
-      "-----      Current Progress:  53 % - Circle 2\n",
-      "Memory: 466/484 597/636\n",
-      "-----      Current Progress:  53 % - Difference 1\n",
-      "-----      Current Progress:  56 % - Resolving domains\n",
-      "Memory: 466/484 598/636\n",
-      "-----      Current Progress:  57 % - Cylinder Block 3 - Magnet IV - 1Q\n",
-      "Memory: 467/484 599/636\n",
-      "-----      Current Progress:  57 % - Circle 1\n",
-      "Memory: 472/484 604/636\n",
-      "-----      Current Progress:  57 % - Circle 2\n",
-      "-----      Current Progress:  57 % - Difference 1\n",
-      "------     Current Progress:  61 % - Resolving domains\n",
-      "Memory: 472/484 605/636\n",
-      "------     Current Progress:  61 % - Cylinder Block 3 - Magnet IV - 2Q\n",
-      "Memory: 473/484 606/636\n",
-      "------     Current Progress:  61 % - Circle 1\n",
-      "Memory: 476/484 609/636\n",
-      "------     Current Progress:  61 % - Circle 2\n",
-      "------     Current Progress:  62 % - Difference 1\n",
-      "------     Current Progress:  65 % - Resolving domains\n",
-      "------     Current Progress:  65 % - Cylinder Block - Iron IV\n",
-      "------     Current Progress:  65 % - Circle 1\n",
-      "Memory: 477/484 610/636\n",
-      "------     Current Progress:  66 % - Circle 2\n",
-      "------     Current Progress:  66 % - Difference 1\n",
-      "-------    Current Progress:  70 % - Resolving domains\n",
-      "Memory: 478/484 610/636\n",
-      "-------    Current Progress:  70 % - Air Gap Cylinder Block High Field  1Q\n",
-      "-------    Current Progress:  70 % - Circle 1\n",
-      "Memory: 480/484 613/636\n",
-      "-------    Current Progress:  70 % - Circle 2\n",
-      "-------    Current Progress:  71 % - Difference 1\n",
-      "-------    Current Progress:  74 % - Resolving domains\n",
-      "Memory: 482/484 615/636\n",
-      "-------    Current Progress:  74 % - Air Gap Cylinder Block Low Field  1Q\n",
-      "-------    Current Progress:  74 % - Circle 1\n",
-      "Memory: 485/485 619/636\n",
-      "-------    Current Progress:  75 % - Circle 2\n",
-      "-------    Current Progress:  75 % - Difference 1\n",
-      "-------    Current Progress:  78 % - Resolving domains\n",
-      "-------    Current Progress:  79 % - Air Gap Cylinder Block High Field  2Q\n",
-      "-------    Current Progress:  79 % - Circle 1\n",
-      "Memory: 486/486 620/636\n",
-      "-------    Current Progress:  79 % - Circle 2\n",
-      "-------    Current Progress:  79 % - Difference 1\n",
-      "--------   Current Progress:  83 % - Resolving domains\n",
-      "--------   Current Progress:  83 % - Air Gap Cylinder Block Low Field  2Q\n",
-      "--------   Current Progress:  83 % - Circle 1\n",
-      "Memory: 487/487 621/636\n",
-      "--------   Current Progress:  83 % - Circle 2\n",
-      "--------   Current Progress:  84 % - Difference 1\n",
-      "Memory: 487/488 621/636\n",
-      "--------   Current Progress:  87 % - Resolving domains\n",
-      "--------   Current Progress:  87 % - Flux Concentrator Shell\n",
-      "--------   Current Progress:  87 % - Circle 1\n",
-      "--------   Current Progress:  88 % - Circle 2\n",
-      "--------   Current Progress:  88 % - Difference 1\n",
-      "---------  Current Progress:  91 % - Resolving domains\n",
-      "---------  Current Progress:  92 % - Environment Cylinder Shell\n",
-      "Memory: 490/490 623/636\n",
-      "---------  Current Progress:  92 % - Circle 1\n",
-      "Memory: 490/491 623/636\n",
-      "---------  Current Progress:  92 % - Circle 2\n",
-      "---------  Current Progress:  92 % - Difference 1\n",
-      "---------  Current Progress:  96 % - Resolving domains\n",
-      "---------  Current Progress:  96 % - Form Union\n",
-      "---------  Current Progress:  99 % - Resolving domains\n",
-      "Memory: 493/493 626/636\n",
-      "---------- Current Progress: 100 % - Creating rendering mesh\n",
-      "Memory: 496/514 644/663\n",
-      "           Current Progress:   0 % - Free Triangular 1\n",
-      "Memory: 606/606 712/714\n",
-      "Number of vertex elements: 44\n",
-      "Number of boundary elements: 967\n",
-      "--         Current Progress:  28 % - Improving element quality\n",
-      "Memory: 606/609 713/715\n",
-      "Number of elements: 8673\n",
-      "Minimum element quality: 0.7396\n",
-      "-----      Current Progress:  59 % - Improving element quality\n",
-      "Memory: 592/609 704/715\n",
-      "-----      Current Progress:  59 % - Mapped 1\n",
-      "Memory: 595/609 704/715\n",
-      "Number of vertex elements: 47\n",
-      "Number of boundary elements: 1157\n",
-      "Number of elements: 9573\n",
-      "Minimum element quality: 0.01933\n",
-      "---------- Current Progress: 100 % - Creating mapped mesh\n",
-      "Memory: 596/609 705/715\n",
-      "Geometry shape order: Quadratic\n",
-      "           Current Progress:   5 % - Compiling equations\n",
-      "Memory: 644/652 754/762\n",
-      "           Current Progress:   5 % - Dependent Variables 1\n",
-      "Memory: 666/668 756/764\n",
-      "Stationary Solver 1 in Study 1/Solution 1 (sol1) started at 30-jan-2017 10:21:52.\n",
-      "Linear solver\n",
-      "Number of degrees of freedom solved for: 21240.\n",
-      "Symmetric matrices found.\n",
-      "Format not changed since Incomplete LU uses nonsymmetric storage.\n",
-      "Scales for dependent variables:\n",
-      "Magnetic scalar potential (nhalbach_system.Vm): 1\n",
-      "Orthonormal null-space function used.\n",
-      "---        Current Progress:  36 % - Preconditioning\n",
-      "Memory: 692/692 779/779\n",
-      "Iter      SolEst     Damping    Stepsize #Res #Jac #Sol LinIt   LinErr   LinRes\n",
-      "---------  Current Progress:  92 % - Solving linear system\n",
-      "Memory: 699/699 786/786\n",
-      "---------  Current Progress:  93 % - Solving linear system\n",
-      "Memory: 691/702 778/789\n",
-      "---------  Current Progress:  94 % - Solving linear system\n",
-      "Memory: 672/702 767/789\n",
-      "---------  Current Progress:  95 % - Solving linear system\n",
-      "Memory: 668/702 763/789\n",
-      "---------  Current Progress:  96 % - Solving linear system\n",
-      "---------  Current Progress:  97 % - Solving linear system\n",
-      "---------  Current Progress:  98 % - Solving linear system\n",
-      "---------  Current Progress:  99 % - Solving linear system\n",
-      "---------- Current Progress: 100 % - Solving linear system\n",
-      "   1        0.66   1.0000000        0.66    1    1    1  5988    0.001 9.2e-007\n",
-      "---------- Current Progress: 100 % - Updating plots\n",
-      "Memory: 628/702 719/789\n",
-      "Stationary Solver 1 in Study 1/Solution 1 (sol1): Solution time: 20 s\n",
-      "                                                  Physical memory: 699 MB\n",
-      "                                                  Virtual memory: 786 MB\n",
-      "-----      Current Progress:  55 % - Evaluating\n",
-      "Memory: 675/702 752/789\n",
-      "-          Current Progress:  10 % - Evaluating\n",
-      "Memory: 679/702 756/789\n",
-      "-----      Current Progress:  55 % - Evaluating\n",
-      "Memory: 682/702 758/789\n",
-      "Class run time: 43 s.\n",
-      "Saving model: C:\\Users\\fabiofortkamp\\code\\teslamax\\java\\TeslaMax_Model.mph\n",
-      "Save time: 0 s.\n",
-      "Total time: 43 s.\n",
-      "---------- Current Progress: 100 % - Done\n",
-      "Memory: 690/702 764/789\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "param_dict = {\"R_i\": 0.015,\n",
     "                \"R_o\": 0.070,\n",
