Create function to convert between array of remanence angles and parameters dictionary

--- a/teslamax.ipynb
+++ b/teslamax.ipynb
@@ -2048,6 +2048,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def expand_parameters_from_remanence_array(alpha_B_rem, params):\n",
+    "    \"\"\"\n",
+    "    Return a new parameters dict with the remanence angles from 'alpha_B_rem' and other parameters from 'params'.\n",
+    "    The length of this array must equal to the sum of the number of segments in both cylinders. \n",
+    "    The first n_II elements refer to the inner magnet, and the remaining elements to the outer magnet.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    params_expanded = params.copy()\n",
+    "    \n",
+    "    n_II = params[\"n_II\"]\n",
+    "    for i in range(0,n_II):\n",
+    "        params_expanded[\"alpha_rem_II_%d\" %(i+1,)] = alpha_B_rem[i]\n",
+    "        \n",
+    "    n_IV = params[\"n_IV\"]\n",
+    "    for j in range(0,n_IV):\n",
+    "        k =  j + n_II #the first n_II elements refer to magnet II\n",
+    "        params_expanded[\"alpha_rem_IV_%d\" %(j+1,)] = alpha_B_rem[k]\n",
+    "        \n",
+    "    return params_expanded\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 103,
    "metadata": {
     "collapsed": false
