Updated figure in the teslamax notebook

--- a/teslamax.ipynb
+++ b/teslamax.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "Teslamax model:\n",
     "\n",
-    "![Teslamax Model](img/teslamax.png)"
+    "<img src=\"teslamax.png\" width=500>"
    ]
   },
   {
