Created function to calculate B from a single magnet segment. Not tested yet

--- a/teslamax.ipynb
+++ b/teslamax.ipynb
@@ -716,101 +716,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A prototype class to help organize all the data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "class TeslaMaxModel():\n",
-    "    \"\"\"\n",
-    "    Class representing the TeslaMax model.\n",
-    "    \n",
-    "    To create an instance of the class, provide a dictionary with all parameters\n",
-    "    and a path where to store the generated text files:\n",
-    "    \n",
-    "    >>> tmm = TeslaMaxModel({\"R_o\": 15e-3, \"B_rem_II\": 1.4, ...}.\n",
-    "                            \"teslamax-results\")\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    def __init__(self,params,path):\n",
-    "        self.params = params\n",
-    "        \n",
-    "        self.path = Path(path)\n",
-    "        self.path.mkdir(exist_ok=True)\n",
-    "        \n",
-    "        self.profile_data = np.empty(2)\n",
-    "        \n",
-    "                \n",
-    "    def run(self,verbose=False):\n",
-    "        \"\"\"\n",
-    "        Change the current directory temporarily to the object's path\n",
-    "        and run the TeslaMax program in it.\n",
-    "        \n",
-    "        Also populates the appropriate fields with results from TeslaMax\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        cwd = os.getcwd()\n",
-    "        os.chdir(str(self.path))\n",
-    "        run_teslamax_from_params(self.params,verbose)\n",
-    "        os.chdir(cwd)\n",
-    "        \n",
-    "        self.profile_data = self.get_profile_data()\n",
-    "        self.fB_profile = interp1d(self.profile_data[:,0],self.profile_data[:,1],kind='linear')\n",
-    "        \n",
-    "    def get_B_III_data(self):\n",
-    "        \"\"\"\n",
-    "        Return an array [x, y, Bx, By] for the air gap region\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        B_III_file_path = self.path / B_III_FILENAME\n",
-    "        B_III_full_data = read_comsol_data_file(str(B_III_file_path))\n",
-    "        \n",
-    "        B_III_data = B_III_full_data[:,:4]\n",
-    "        return B_III_data\n",
-    "        \n",
-    "        \n",
-    "    def get_profile_data(self):\n",
-    "        \"\"\"\n",
-    "        Return an array of the magnetic profile data, where the first column\n",
-    "        is the angle in degrees [0,360] and the second is the average magnetic\n",
-    "        flux density in tesla\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        profile_file_path = self.path / MAGNETIC_PROFILE_FILENAME\n",
-    "        profile_data = np.loadtxt(str(profile_file_path),\n",
-    "                         skiprows=1)\n",
-    "        \n",
-    "        return profile_data\n",
-    "    \n",
-    "    def calculate_B_profile(self,theta):\n",
-    "        \"\"\"\n",
-    "        Return average magnetic flux density at angular position 'theta' (as an array with the same length).\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        return self.fB_profile(theta)\n",
-    "    \n",
-    " \n",
-    "        \n",
-    "        \n",
-    "    \n",
-    "    \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Playground"
    ]
   },
@@ -2374,6 +2279,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A prototype class to help organize all the data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "class TeslaMaxModel():\n",
+    "    \"\"\"\n",
+    "    Class representing the TeslaMax model.\n",
+    "    \n",
+    "    To create an instance of the class, provide a dictionary with all parameters\n",
+    "    and a path where to store the generated text files:\n",
+    "    \n",
+    "    >>> tmm = TeslaMaxModel({\"R_o\": 15e-3, \"B_rem_II\": 1.4, ...}.\n",
+    "                            \"teslamax-results\")\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self,params,path):\n",
+    "        self.params = params\n",
+    "        \n",
+    "        self.path = Path(path)\n",
+    "        self.path.mkdir(exist_ok=True)\n",
+    "        \n",
+    "        self.profile_data = np.empty(2)\n",
+    "        \n",
+    "                \n",
+    "    def run(self,verbose=False):\n",
+    "        \"\"\"\n",
+    "        Change the current directory temporarily to the object's path\n",
+    "        and run the TeslaMax program in it.\n",
+    "        \n",
+    "        Also populates the appropriate fields with results from TeslaMax\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        cwd = os.getcwd()\n",
+    "        os.chdir(str(self.path))\n",
+    "        run_teslamax_from_params(self.params,verbose)\n",
+    "        os.chdir(cwd)\n",
+    "        \n",
+    "        self.profile_data = self.get_profile_data()\n",
+    "        self.fB_profile = interp1d(self.profile_data[:,0],self.profile_data[:,1],kind='linear')\n",
+    "        \n",
+    "    def get_B_III_data(self):\n",
+    "        \"\"\"\n",
+    "        Return an array [x, y, Bx, By] for the air gap region\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        B_III_file_path = self.path / B_III_FILENAME\n",
+    "        B_III_full_data = read_comsol_data_file(str(B_III_file_path))\n",
+    "        \n",
+    "        B_III_data = B_III_full_data[:,:4]\n",
+    "        return B_III_data\n",
+    "        \n",
+    "        \n",
+    "    def get_profile_data(self):\n",
+    "        \"\"\"\n",
+    "        Return an array of the magnetic profile data, where the first column\n",
+    "        is the angle in degrees [0,360] and the second is the average magnetic\n",
+    "        flux density in tesla\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        profile_file_path = self.path / MAGNETIC_PROFILE_FILENAME\n",
+    "        profile_data = np.loadtxt(str(profile_file_path),\n",
+    "                         skiprows=1)\n",
+    "        \n",
+    "        return profile_data\n",
+    "    \n",
+    "    def calculate_B_profile(self,theta):\n",
+    "        \"\"\"\n",
+    "        Return average magnetic flux density at angular position 'theta' (as an array with the same length).\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        return self.fB_profile(theta)\n",
+    "    \n",
+    " \n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
@@ -2422,6 +2422,46 @@
     "    teslamax_model.run(verbose=False)\n",
     "    \n",
     "    return -1*calculate_average_high_field(teslamax_model.get_profile_data())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def calculate_B_from_single_block(segment, quadrant, magnet, magnitude, angle, params):\n",
+    "    \"\"\"\n",
+    "    Return [x, y, B_x, B_y] when 'segment' (1, 2, 3, ...) of 'quadrant' ('1Q' or '2Q') of 'magnet' \n",
+    "    (either 'II' or 'IV') has a remanence of 'magnitude' and 'angle', and all other segments have \n",
+    "    null remanence. \n",
+    "    \n",
+    "    Other parameters are taken from 'params'.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if magnet == 'II':\n",
+    "        n = params['n_II']\n",
+    "    elif magnet == 'IV':\n",
+    "        n = params['n_IV']\n",
+    "    \n",
+    "    # first nullify all remanences\n",
+    "    for m in ['II', 'IV']:\n",
+    "        \n",
+    "        for q in ['1Q', '2Q']:\n",
+    "            \n",
+    "            for s in range(0,n):\n",
+    "                \n",
+    "                params[\"B_rem_%s_%d_%s\" %(m,s+1,q)] = 0.0\n",
+    "                \n",
+    "    # set the desired elements\n",
+    "    params[\"B_rem_%s_%d_%s\" %(magnet,segment, quadrant)] = magnitude\n",
+    "    params[\"alpha_rem_%s_%d_%s\" %(magnet,segment,quadrant)] = angle\n",
+    "    \n",
+    "    tmm = TeslaMaxModel(params,'teslamax-play-functional')\n",
+    "    return tmm.get_B_III_data()\n",
     "    "
    ]
   },
