Modified TeslaMaxModel class to include a method to calculate B_III(x,y)

--- a/teslamax.ipynb
+++ b/teslamax.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -2287,7 +2287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -2340,6 +2340,17 @@
     "        \n",
     "        B_III_data = B_III_full_data[:,:4]\n",
     "        return B_III_data\n",
+    "    \n",
+    "    def calculate_B_III_from_position(self,point_cartesian):\n",
+    "        \"\"\"\n",
+    "        Return B_III(x,y), where 'point_cartesian' = [x,y]\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        B_III_data = self.get_B_III_data()\n",
+    "        \n",
+    "        return griddata(B_III_data[:,:2],\n",
+    "                       B_III_data[:,2:4],\n",
+    "                       point_cartesian)[0]\n",
     "        \n",
     "        \n",
     "    def get_profile_data(self):\n",
@@ -2471,28 +2482,23 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.82055515777777777"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "params = {\"R_i\": 0.015,\n",
+    "param_dict = {\"R_i\": 0.015,\n",
     "                \"R_o\": 0.070,\n",
     "                \"h_gap\": 0.020,\n",
     "                \"R_s\": 0.140,\n",
     "                \"h_fc\": 0.010,\n",
     "                \"R_e\": 2,\n",
     "                \"n_IV\": 3,\n",
+    "                \"alpha_rem_IV_1\": 15,\n",
+    "                \"alpha_rem_IV_2\": 45,\n",
+    "                \"alpha_rem_IV_3\": 135,\n",
     "                \"phi_S_IV\": 45,\n",
-    "                \"n_II\": 2,\n",
+    "                \"n_II\": 3,\n",
+    "                \"alpha_rem_II_1\": 15,\n",
+    "                \"alpha_rem_II_2\": 30,\n",
+    "                \"alpha_rem_II_3\": 45,\n",
     "                \"phi_C_II\": 15,\n",
     "                \"phi_S_II\": 45,\n",
     "                \"B_rem_II\": 1.4,\n",
@@ -2501,12 +2507,94 @@
     "                \"mu_r_IV\": 1.05,\n",
     "              \"linear_iron\": 1,\n",
     "              \"mu_r_iron\": 5e3,\n",
-    "             }\n",
-    "\n",
-    "alpha_B_rem_0 = np.array([0,0,0,0,0])\n",
-    "\n",
-    "calculate_functional_from_remanence_array(alpha_B_rem_0, params)"
+    "             }"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tmm = TeslaMaxModel(param_dict,'teslamax-play-functional')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tmm.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = param_dict[\"R_o\"] + param_dict[\"h_gap\"]/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "point = np.array([x,y])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  9.11903448e-01,  -9.15212454e-05])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmm.calculate_B_III_from_position(point)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
