Improved and tested function to calculate the effect of a single magnet block

--- a/teslamax.ipynb
+++ b/teslamax.ipynb
@@ -2438,15 +2438,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def calculate_B_from_single_block(segment, quadrant, magnet, magnitude, angle, params):\n",
+    "def calculate_B_III_from_single_block(point, segment, quadrant, magnet, magnitude, angle, params):\n",
     "    \"\"\"\n",
-    "    Return [x, y, B_x, B_y] when 'segment' (1, 2, 3, ...) of 'quadrant' ('1Q' or '2Q') of 'magnet' \n",
+    "    Return B_III(point) when 'segment' (1, 2, 3, ...) of 'quadrant' ('1Q' or '2Q') of 'magnet' \n",
     "    (either 'II' or 'IV') has a remanence of 'magnitude' and 'angle', and all other segments have \n",
     "    null remanence. \n",
     "    \n",
@@ -2472,7 +2472,8 @@
     "    params[\"alpha_rem_%s_%d_%s\" %(magnet,segment,quadrant)] = angle\n",
     "    \n",
     "    tmm = TeslaMaxModel(params,'teslamax-play-functional')\n",
-    "    return tmm.get_B_III_data()\n",
+    "    tmm.run(verbose=False)\n",
+    "    return tmm.calculate_B_III_from_position(point)\n",
     "    "
    ]
   },
@@ -2585,6 +2586,28 @@
    ],
    "source": [
     "tmm.calculate_B_III_from_position(point)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -3.30318558e-02,  -4.37169502e-05])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_B_III_from_single_block(point,magnet='II',angle=15,quadrant='1Q',magnitude=1.4,segment=2,params=param_dict)"
    ]
   },
   {
