Modified class to clean its directory before running simulations

--- a/teslamax.ipynb
+++ b/teslamax.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -81,6 +81,7 @@
     "from pathlib import Path\n",
     "import os\n",
     "import subprocess\n",
+    "import shutil\n",
     "import math\n",
     "from pandas import Series, DataFrame\n",
     "import pandas as pd\n",
@@ -2287,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -2303,12 +2304,18 @@
     "    >>> tmm = TeslaMaxModel({\"R_o\": 15e-3, \"B_rem_II\": 1.4, ...}.\n",
     "                            \"teslamax-results\")\n",
     "    \n",
+    "    If the path already exists, it will be cleaned up to avoid confusion between different simulations. \n",
+    "    If you want to preserve the data in 'path', set the argument 'clean' to False in the constructor\n",
+    "    \n",
     "    \"\"\"\n",
     "    \n",
-    "    def __init__(self,params,path):\n",
+    "    def __init__(self,params,path,clean=True):\n",
     "        self.params = params\n",
     "        \n",
     "        self.path = Path(path)\n",
+    "        if (self.path.exists() ) and (self.path.is_dir()) and clean:\n",
+    "            shutil.rmtree(str(self.path))\n",
+    "        \n",
     "        self.path.mkdir(exist_ok=True)\n",
     "        \n",
     "        self.profile_data = np.empty(2)\n",
@@ -2513,18 +2520,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "tmm = TeslaMaxModel(param_dict,'teslamax-play-functional')"
+    "tmm = TeslaMaxModel(param_dict,'teslamax-play-functional',clean=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
