--- a/teslamax.ipynb
+++ b/teslamax.ipynb
@@ -2423,16 +2423,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def calculate_functional_from_remanence_array(alpha_B_rem, params):\n",
+    "    \"\"\"\n",
+    "    Returns the (scalar) objective functional  for the TeslaMax optimization.\n",
+    "    The optimization variables are the remanence angles for the magnet segments, \n",
+    "    specified in the array 'alpha_B_rem' (the first n_II elements refer to the inner magnet, and\n",
+    "    the remaining n_IV elements refer to the outer one).\n",
+    "    The other parameters are included in the dictionary 'params'.\n",
+    "    \n",
+    "    All simulation files are placed in a directory 'teslamax-optimization' in the current directory\n",
+    "    \"\"\"\n",
     "    \n",
     "    \n",
-    "    path_functional = \"teslamax-play-functional\"\n",
+    "    path_functional = \"teslamax-optimization\"\n",
     "\n",
     "    param_dict = expand_parameters_from_remanence_array(alpha_B_rem, params)\n",
     "    \n",
@@ -2486,13 +2495,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "param_dict = {\"R_i\": 0.015,\n",
+    "param_optimization = {\"R_i\": 0.015,\n",
     "                \"R_o\": 0.070,\n",
     "                \"h_gap\": 0.020,\n",
     "                \"R_s\": 0.140,\n",
@@ -2502,16 +2511,26 @@
     "                \"alpha_rem_IV_1\": 15,\n",
     "                \"alpha_rem_IV_2\": 45,\n",
     "                \"alpha_rem_IV_3\": 135,\n",
+    "                \"B_rem_IV_1_1Q\": 1.4,\n",
+    "                \"B_rem_IV_2_1Q\": 1.4,\n",
+    "                \"B_rem_IV_3_1Q\": 1.4,\n",
+    "                \"B_rem_IV_1_2Q\": 1.4,\n",
+    "                \"B_rem_IV_2_2Q\": 1.4,\n",
+    "                \"B_rem_IV_3_2Q\": 1.4,\n",
     "                \"phi_S_IV\": 45,\n",
     "                \"n_II\": 3,\n",
     "                \"alpha_rem_II_1\": 15,\n",
     "                \"alpha_rem_II_2\": 30,\n",
     "                \"alpha_rem_II_3\": 45,\n",
+    "                \"B_rem_II_1_1Q\": 1.4,\n",
+    "                \"B_rem_II_2_1Q\": 1.4,\n",
+    "                \"B_rem_II_3_1Q\": 1.4,\n",
+    "                \"B_rem_II_1_2Q\": 1.4,\n",
+    "                \"B_rem_II_2_2Q\": 1.4,\n",
+    "                \"B_rem_II_3_2Q\": 1.4,\n",
     "                \"phi_C_II\": 15,\n",
     "                \"phi_S_II\": 45,\n",
-    "                \"B_rem_II\": 1.4,\n",
     "                \"mu_r_II\": 1.05,\n",
-    "                \"B_rem_IV\": 1.4,\n",
     "                \"mu_r_IV\": 1.05,\n",
     "              \"linear_iron\": 1,\n",
     "              \"mu_r_iron\": 5e3,\n",
@@ -2520,62 +2539,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 loop, best of 3: 31.8 s per loop\n"
+     ]
+    }
+   ],
    "source": [
-    "tmm = TeslaMaxModel(param_dict,'teslamax-play-functional',clean=False)"
+    "%%timeit\n",
+    "alpha_B_rem_0 = np.array([15,45,135,14,30,45])\n",
+    "calculate_functional_from_remanence_array(alpha_B_rem_0,param_optimization)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tmm.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x = param_dict[\"R_o\"] + param_dict[\"h_gap\"]/2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "point = np.array([x,y])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -2583,38 +2568,17 @@
     {
      "data": {
       "text/plain": [
-       "array([  9.11903448e-01,  -9.15212454e-05])"
+       "-0.8291401711111106"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tmm.calculate_B_III_from_position(point)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ -3.30318558e-02,  -4.37169502e-05])"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calculate_B_III_from_single_block(point,magnet='II',angle=15,quadrant='1Q',magnitude=1.4,segment=2,params=param_dict)"
+    "alpha_B_rem_0 = np.array([15.001,45,135,14,30,45])\n",
+    "calculate_functional_from_remanence_array(alpha_B_rem_0,param_optimization)"
    ]
   },
   {
