Created non-optimized function to calculate the derivative of the functional and included a simple implementation of gradient descent

--- a/teslamax.ipynb
+++ b/teslamax.ipynb
@@ -2454,6 +2454,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def calculate_derivative_functional_to_remanence(i,alpha_B_rem,params):\n",
+    "    \"\"\"\n",
+    "    Return the derivative of the objective functional with respect to the 'i'-th element of the\n",
+    "    remanence angle array 'alpha_B_rem' (where the first n_II elements refer to the inner magnet, \n",
+    "    and the remaining n_IV to the outer one).\n",
+    "    Other parameters are taken from 'params'\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    delta_alpha = 1e-6\n",
+    "    \n",
+    "    alpha_B_rem_plus = alpha_B_rem.copy()\n",
+    "    alpha_B_rem_plus[i] = alpha_B_rem[i] + delta_alpha\n",
+    "    \n",
+    "    d_functional = (calculate_functional_from_remanence_array(alpha_B_rem_plus, params) - \n",
+    "                    calculate_functional_from_remanence_array(alpha_B_rem, params)) / delta_alpha\n",
+    "    return d_functional"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 41,
    "metadata": {
     "collapsed": false
@@ -2495,13 +2521,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "param_optimization = {\"R_i\": 0.015,\n",
+    "params_optimization = {\"R_i\": 0.015,\n",
     "                \"R_o\": 0.070,\n",
     "                \"h_gap\": 0.020,\n",
     "                \"R_s\": 0.140,\n",
@@ -2539,7 +2565,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.82894845888888857"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha_B_rem_0 = np.array([15,45,135,14,30,45])\n",
+    "calculate_functional_from_remanence_array(alpha_B_rem_0,params_optimization)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1776.1866666665683"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_derivative_functional_to_remanence(0,alpha_B_rem_0,params_optimization)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -2548,19 +2619,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 31.8 s per loop\n"
+      "-273\n",
+      "-317\n",
+      "-144\n",
+      "-121\n",
+      "-96\n",
+      "-195\n",
+      "-180\n",
+      "-165\n",
+      "-152\n",
+      "-102\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
-    "alpha_B_rem_0 = np.array([15,45,135,14,30,45])\n",
-    "calculate_functional_from_remanence_array(alpha_B_rem_0,param_optimization)"
+    "# basic and non-optimized implementation of gradient descent\n",
+    "i_segment = 0\n",
+    "n_it = 10\n",
+    "\n",
+    "gamma = -1e-1\n",
+    "\n",
+    "alpha_B_rem_0 = np.array([0,0,0,0,0,0])\n",
+    "\n",
+    "alpha_B_rem = alpha_B_rem_0.copy()\n",
+    "for j in range(0,n_it):\n",
+    "    dS = calculate_derivative_functional_to_remanence(i_segment,alpha_B_rem,params_optimization)\n",
+    "    alpha_B_rem[i_segment] = alpha_B_rem[i_segment] + gamma * dS\n",
+    "    print(alpha_B_rem[i_segment])\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -2568,17 +2659,39 @@
     {
      "data": {
       "text/plain": [
-       "-0.8291401711111106"
+       "-0.8115763033333333"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alpha_B_rem_0 = np.array([15.001,45,135,14,30,45])\n",
-    "calculate_functional_from_remanence_array(alpha_B_rem_0,param_optimization)"
+    "calculate_functional_from_remanence_array(alpha_B_rem_0,params_optimization)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.81428324111111106"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha_B_rem_1 = np.array([-102,0,0,0,0,0])\n",
+    "calculate_functional_from_remanence_array(alpha_B_rem_1,params_optimization)"
    ]
   },
   {
