Began improving function to calculate the derivative (not finished)

--- a/teslamax.ipynb
+++ b/teslamax.ipynb
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -2288,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -2357,7 +2357,7 @@
     "        \n",
     "        return griddata(B_III_data[:,:2],\n",
     "                       B_III_data[:,2:4],\n",
-    "                       point_cartesian)[0]\n",
+    "                       point_cartesian)\n",
     "        \n",
     "        \n",
     "    def get_profile_data(self):\n",
@@ -2454,6 +2454,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.empty?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
    "metadata": {
     "collapsed": true
@@ -2469,12 +2480,60 @@
     "    \"\"\"\n",
     "    \n",
     "    delta_alpha = 1e-6\n",
+    "\n",
+    "    n_II = params['n_II']\n",
+    "    n_IV = params['n_IV']\n",
     "    \n",
-    "    alpha_B_rem_plus = alpha_B_rem.copy()\n",
-    "    alpha_B_rem_plus[i] = alpha_B_rem[i] + delta_alpha\n",
+    "    F_II_x = np.empty(n_II)\n",
+    "    F_II_y = np.empty(n_II)\n",
     "    \n",
-    "    d_functional = (calculate_functional_from_remanence_array(alpha_B_rem_plus, params) - \n",
-    "                    calculate_functional_from_remanence_array(alpha_B_rem, params)) / delta_alpha\n",
+    "    F_IV_x = np.empty(n_IV)\n",
+    "    F_IV_y = np.empty(n_IV)\n",
+    "    \n",
+    "    R_o = params[\"R_o\"]\n",
+    "    R_g = params[\"R_o\"] + params[\"h_gap\"]\n",
+    "    points_air_gap = generate_sector_mesh_points(R_o,R_g,0.0,np.pi)\n",
+    "    \n",
+    "    for i in range(0,n_II):\n",
+    "        F_II_x_1Q = calculate_B_III_from_single_block(point=points_air_gap, \n",
+    "                                                   segment=i+1, \n",
+    "                                                   quadrant='1Q', \n",
+    "                                                   magnet='II', \n",
+    "                                                   magnitude=params[\"B_rem_II_%d_1Q\" %(i+1)], \n",
+    "                                                    angle=0.0, \n",
+    "                                                    params=params)\n",
+    "        \n",
+    "        F_II_x_2Q = calculate_B_III_from_single_block(point=points_air_gap, \n",
+    "                                                   segment=i+1, \n",
+    "                                                   quadrant='2Q', \n",
+    "                                                   magnet='II', \n",
+    "                                                   magnitude=params[\"B_rem_II_%d_2Q\" %(i+1)], \n",
+    "                                                    angle=0.0, \n",
+    "                                                    params=params)\n",
+    "        \n",
+    "        F_II_x[i] = F_II_x_1Q + F_II_x_2Q\n",
+    "        \n",
+    "        F_II_y_1Q = calculate_B_III_from_single_block(point=points_air_gap, \n",
+    "                                                   segment=i+1, \n",
+    "                                                   quadrant='1Q', \n",
+    "                                                   magnet='II', \n",
+    "                                                   magnitude=params[\"B_rem_II_%d_1Q\" %(i+1)], \n",
+    "                                                    angle=90.0, \n",
+    "                                                    params=params)\n",
+    "        \n",
+    "        F_II_y_2Q = calculate_B_III_from_single_block(point=points_air_gap, \n",
+    "                                                   segment=i+1, \n",
+    "                                                   quadrant='2Q', \n",
+    "                                                   magnet='II', \n",
+    "                                                   magnitude=params[\"B_rem_II_%d_2Q\" %(i+1)], \n",
+    "                                                    angle=90.0, \n",
+    "                                                    params=params)\n",
+    "        \n",
+    "        F_II_y[i] = F_II_y_1Q + F_II_y_2Q\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    \n",
     "    return d_functional"
    ]
   },
@@ -2692,6 +2751,29 @@
    "source": [
     "alpha_B_rem_1 = np.array([-102,0,0,0,0,0])\n",
     "calculate_functional_from_remanence_array(alpha_B_rem_1,params_optimization)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -1.85366918e-02,  -5.64588834e-05],\n",
+       "       [ -1.03865801e-02,  -2.87557457e-02]])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_B_III_from_single_block([[0.080,0],[0.080,0.01]], segment=1, quadrant='1Q', magnet='II', magnitude=1.4, angle=0, params=param_optimization)"
    ]
   },
   {
